src/objects/SIDRA_eDefault__c.object
<CustomObject>
    <description>track the defaults and repayments or recoveries using information coming from IRIS</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the agency account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SIDRA_eDefault</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Exchange_Rate__c</fullName>
        <description>Currency Exchange Rate</description>
        <label>Currency Exchange Rate</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_movement__c</fullName>
        <defaultValue>IF(MOD( Today()- DATE(1985,6,24),7)=0, Today()-3, Today()-1)</defaultValue>
        <description>Date of the movement, coming from IRIS or from update AIMS DEF field in SIDRA for initial defaulted amount</description>
        <label>Date of movement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_date__c</fullName>
        <label>Default date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_record_code__c</fullName>
        <description>Default record code from Edefault. For new data it is the SIDRA case number</description>
        <inlineHelpText>Default record code from Edefault. For new data it is the SIDRA case number</inlineHelpText>
        <label>Default record code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defaulted_Amount__c</fullName>
        <description>To be filled for default negative balance or short payments after default (subsequent sales)</description>
        <label>Defaulted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defaulted_amount_USD__c</fullName>
        <formula>IF(  Defaulted_Amount__c  &gt; 0, Defaulted_Amount__c / Currency_Exchange_Rate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defaulted amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prorated_amount__c</fullName>
        <description>Amount to be filled in case of proration to airlines</description>
        <label>Prorated amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recovered_Amount__c</fullName>
        <label>Recovered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recovered_amount_USD__c</fullName>
        <formula>IF( Recovered_Amount__c  &gt; 0, Recovered_Amount__c /  Currency_Exchange_Rate__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recovered amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIDRA_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to SIDRA case of default. Not mandatory, as for some historical data there will be no SIDRA case</description>
        <label>SIDRA Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SIDRA_eDefault</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>SIDRA Default Details</label>
    <nameField>
        <displayFormat>SDD-{000000000}</displayFormat>
        <label>SIDRA eDefault Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIDRA Default Details</pluralLabel>
    <recordTypes>
        <fullName>Non_payment</fullName>
        <active>true</active>
        <description>Sidra eDefault - Non-payment</description>
        <label>Non-payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proration</fullName>
        <active>true</active>
        <description>Sidra eDefault - Proration</description>
        <label>Proration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recovery</fullName>
        <active>true</active>
        <description>Sidra eDefault - Recovery</description>
        <label>Recovery</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>